--- a/book.html
+++ b/book.html
@@ -21,7 +21,7 @@
         <li><a href="/about.html">About</a></li>
     </ul>
   </nav>
-
+  <main>
   <section class="banner">
     <h2>30% OFF this weekend</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore tempora eaque est modi, sapiente laudantium vero hic animi! Nam vitae laborum laudantium non sint natus debitis eligendi assumenda repudiandae beatae.</p>
@@ -173,7 +173,7 @@
         </div>
       </div>
   </section>
-
+</main>
   <footer class="footer">
     <img src="assets/logos/logo2.png" alt="Logo" class="footer-logo">
     <p>&copy; 2024 Little Lemon. All rights reserved.</p>
