--- a/index.html
+++ b/index.html
@@ -21,35 +21,35 @@
       <li><a href="/about.html">About</a></li>
     </ul>
   </nav>
-
+<main>
   <section class="banner">
         <h2>30% OFF this weekend</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus ipsa ex nisi neque quidem quisquam inventore aperiam minus recusandae suscipit voluptatum dolorem, corporis quibusdam dolor quae blanditiis, impedit magni autem.</p>
   </section>
 
   <section class="cards">
-    <div class="card">
+    <article class="card">
       <h3>Our New Menu</h3>
       <img src="assets/menu.png" alt="Menu">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ipsa mollitia. Quam, placeat ullam accusamus excepturi voluptas recusandae dolorum tenetur vero laboriosam eveniet dignissimos exercitationem, quia quasi nisi asperiores unde.</p>
       <a href="#">See Our New Menu</a>
-    </div>
-    <div class="card">
+    </article>
+    <article class="card">
       <h3>Book a Table</h3>
       <img src="assets/book.png" alt="Book">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus similique dolor eveniet repellendus at officia, eaque, tempore voluptatem porro sapiente, ipsa error vitae eos delectus aliquam voluptates quo magnam expedita.</p>
       <a href="#">Book a Table Now</a>
-    </div>
-    <div class="card">
+    </article>
+    <article class="card">
       <h3>Opening Hours</h3>
       <img src="assets/hours.png" alt="About">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint deserunt, voluptates nostrum.</p>
       <span>Mon - Fri: 2pm to 10pm</span>
       <span>Sat: 2pm to 11pm</span>
       <span>Sun: 2pm to 9pm</span>
-    </div>
+    </article>
   </section>
-
+</main>
   <footer class="footer">
     <img src="assets/logos/logo2.png" alt="Logo" class="footer-logo">
     <p>&copy; 2024 Little Lemon. All rights reserved.</p>
