--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
         <li><a href="/about.html">About</a></li>
     </ul>
   </nav>
-
+  <main>
   <section class="banner">
     <h2>30% OFF this weekend</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloremque deserunt deleniti voluptates, fugiat reprehenderit vero voluptatem in atque dolorum laborum aperiam. Atque rerum quaerat facilis. Distinctio, sint qui! Inventore.</p>
@@ -94,7 +94,7 @@
         <button class="menu-btn"><a href="#" target="_blank" rel="noopener noreferrer">Order Now</a></button>
       </div>
   </section>
-
+</main>
   <footer class="footer">
     <img src="assets/logos/logo2.png" alt="Logo" class="footer-logo">
     <p>&copy; 2024 Little Lemon. All rights reserved.</p>
