--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <li><a href="/about.html">About</a></li>
     </ul>
   </nav>
-
+  <main>
   <section class="banner">
   </section>
 
@@ -35,7 +35,7 @@
     
   </section>
 
-  
+  </main>
 
   <footer class="footer">
     <img src="assets/logos/logo2.png" alt="Logo" class="footer-logo">
