--- a/book.html
+++ b/book.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
-        <a href="/">
-            <img src="assets/logos/logo4.png" alt="Logo" class="logo">
-        </a>
-      </header>
+  <header class="header">
+    <a href="/">
+      <img src="assets/logos/logo4.png" alt="Logo" class="logo">
+    </a>
+  </header>
 
   <nav class="navbar">
     <ul>
@@ -24,7 +24,7 @@
   <main>
   <section class="banner">
     <h2>30% OFF this weekend</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore tempora eaque est modi, sapiente laudantium vero hic animi! Nam vitae laborum laudantium non sint natus debitis eligendi assumenda repudiandae beatae.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus ipsa ex nisi neque quidem quisquam inventore aperiam minus suscipit voluptatum.</p>
   </section>
 
   <section class="cards booking-cards">
