--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 <main>
   <section class="banner">
         <h2>30% OFF this weekend</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus ipsa ex nisi neque quidem quisquam inventore aperiam minus recusandae suscipit voluptatum dolorem, corporis quibusdam dolor quae blanditiis, impedit magni autem.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus ipsa ex nisi neque quidem quisquam inventore aperiam minus suscipit voluptatum.</p>
   </section>
 
   <section class="cards">
     <article class="card">
       <h3>Our New Menu</h3>
       <img src="assets/menu.png" alt="Menu">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ipsa mollitia. Quam, placeat ullam accusamus excepturi voluptas recusandae dolorum tenetur vero laboriosam eveniet dignissimos exercitationem, quia quasi nisi asperiores unde.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, ipsa mollitia. Quam, placeat ullam accusamus excepturi voluptas recusandae dolorum tenetur vero laboriosam.</p>
       <a href="#">See Our New Menu</a>
     </article>
     <article class="card">
