--- a/menu.html
+++ b/menu.html
@@ -1,103 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Booking - Lemon</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Booking - Lemon</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header class="header">
-        <a href="/">
-            <img src="assets/logos/logo4.png" alt="Logo" class="logo">
-        </a>
-      </header>
+      <a href="/">
+        <img src="assets/logos/logo4.png" alt="Logo" class="logo" />
+      </a>
+    </header>
 
-  <nav class="navbar">
-    <ul>
+    <nav class="navbar">
+      <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/menu.html">Menu</a></li>
         <li><a href="/book.html">Book</a></li>
         <li><a href="/about.html">About</a></li>
-    </ul>
-  </nav>
-  <main>
-  <section class="banner">
-    <h2>30% OFF this weekend</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus doloremque deserunt deleniti voluptates, fugiat reprehenderit vero voluptatem in atque dolorum laborum aperiam. Atque rerum quaerat facilis. Distinctio, sint qui! Inventore.</p>
+      </ul>
+    </nav>
+    <main>
+      <section class="banner">
+        <h2>30% OFF this weekend</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus ipsa ex nisi neque quidem quisquam inventore aperiam minus suscipit voluptatum.</p>
   </section>
 
-  <section class="cards menu-cards">
-    <div class="card menu-card">
-      <h3>Dish 1</h3>
-      <img src="assets/mfood-01.jpg" alt="Dish 1">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <span class="menu-prep">Prep Time: 10-15min</span>
-        <button class="menu-btn"><a href="#" target="_blank" rel="noopener noreferrer">Order Now</a></button>
-    </div>
-    <div class="card menu-card">
-      <h3>Dish 2</h3>
-      <img src="assets/mfood-02.jpg" alt="Dish 2">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <span class="menu-prep">Prep Time: 10-15min</span>
-      <button class="menu-btn"><a href="#" target="_blank" rel="noopener noreferrer">Order Now</a></button>
-    </div>
-    <div class="card menu-card">
-      <h3>Dish 3</h3>
-      <img src="assets/mfood-03.jpg" alt="Dish 3">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <span class="menu-prep">Prep Time: 10-15min</span>
-      <button class="menu-btn"><a href="#" target="_blank" rel="noopener noreferrer">Order Now</a></button>
-    </div>
-    <div class="card menu-card">
-        <h3>Dish 4</h3>
-        <img src="assets/mfood-04.jpg" alt="Dish 4">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <span class="menu-prep">Prep Time: 10-15min</span>
-        <button class="menu-btn"><a href="#" target="_blank" rel="noopener noreferrer">Order Now</a></button>
-      </div>
+      <section class="cards menu-cards">
+        <div class="card menu-card">
+          <h3>Dish 1</h3>
+          <img src="assets/mfood-01.jpg" alt="Dish 1" />
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <span class="menu-prep">Prep Time: 10-15min</span>
+          <button class="menu-btn">
+            <a href="#" target="_blank" rel="noopener noreferrer">Order Now</a>
+          </button>
+        </div>
+        <div class="card menu-card">
+          <h3>Dish 2</h3>
+          <img src="assets/mfood-02.jpg" alt="Dish 2" />
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <span class="menu-prep">Prep Time: 10-15min</span>
+          <button class="menu-btn">
+            <a href="#" target="_blank" rel="noopener noreferrer">Order Now</a>
+          </button>
+        </div>
+        <div class="card menu-card">
+          <h3>Dish 3</h3>
+          <img src="assets/mfood-03.jpg" alt="Dish 3" />
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <span class="menu-prep">Prep Time: 10-15min</span>
+          <button class="menu-btn">
+            <a href="#" target="_blank" rel="noopener noreferrer">Order Now</a>
+          </button>
+        </div>
+        <div class="card menu-card">
+          <h3>Dish 4</h3>
+          <img src="assets/mfood-04.jpg" alt="Dish 4" />
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <span class="menu-prep">Prep Time: 10-15min</span>
+          <button class="menu-btn">
+            <a href="#" target="_blank" rel="noopener noreferrer">Order Now</a>
+          </button>
+        </div>
 
-      <div class="card menu-card">
-        <h3>Dish 5</h3>
-        <img src="assets/mfood-05.jpg" alt="Dish 5">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <span class="menu-prep">Prep Time: 10-15min</span>
-        <button class="menu-btn"><a href="#" target="_blank" rel="noopener noreferrer">Order Now</a></button>
-      </div>
-      <div class="card menu-card">
-        <h3>Dish 6</h3>
-        <img src="assets/mfood-06.jpg" alt="Dish 6">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <span class="menu-prep">Prep Time: 10-15min</span>
-        <button class="menu-btn"><a href="#" target="_blank" rel="noopener noreferrer">Order Now</a></button>
-      </div>
-      <div class="card menu-card">
-        <h3>Dish 7</h3>
-        <img src="assets/mfood-07.jpg" alt="Dish 7">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <span class="menu-prep">Prep Time: 10-15min</span>
-        <button class="menu-btn"><a href="#" target="_blank" rel="noopener noreferrer">Order Now</a></button>
-      </div>
+        <div class="card menu-card">
+          <h3>Dish 5</h3>
+          <img src="assets/mfood-05.jpg" alt="Dish 5" />
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <span class="menu-prep">Prep Time: 10-15min</span>
+          <button class="menu-btn">
+            <a href="#" target="_blank" rel="noopener noreferrer">Order Now</a>
+          </button>
+        </div>
+        <div class="card menu-card">
+          <h3>Dish 6</h3>
+          <img src="assets/mfood-06.jpg" alt="Dish 6" />
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <span class="menu-prep">Prep Time: 10-15min</span>
+          <button class="menu-btn">
+            <a href="#" target="_blank" rel="noopener noreferrer">Order Now</a>
+          </button>
+        </div>
+        <div class="card menu-card">
+          <h3>Dish 7</h3>
+          <img src="assets/mfood-07.jpg" alt="Dish 7" />
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <span class="menu-prep">Prep Time: 10-15min</span>
+          <button class="menu-btn">
+            <a href="#" target="_blank" rel="noopener noreferrer">Order Now</a>
+          </button>
+        </div>
 
-      <div class="card menu-card">
-        <h3>Dish 8</h3>
-        <img src="assets/mfood-08.jpeg" alt="Dish 8">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <span class="menu-prep">Prep Time: 10-15min</span>
-        <button class="menu-btn"><a href="#" target="_blank" rel="noopener noreferrer">Order Now</a></button>
-      </div>
-      <div class="card menu-card">
-        <h3>Dish 9</h3>
-        <img src="assets/mfood-09.jpg" alt="Dish 9">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <span class="menu-prep">Prep Time: 10-15min</span>
-        <button class="menu-btn"><a href="#" target="_blank" rel="noopener noreferrer">Order Now</a></button>
-      </div>
-  </section>
-</main>
-  <footer class="footer">
-    <img src="assets/logos/logo2.png" alt="Logo" class="footer-logo">
-    <p>&copy; 2024 Little Lemon. All rights reserved.</p>
-  </footer>
-</body>
+        <div class="card menu-card">
+          <h3>Dish 8</h3>
+          <img src="assets/mfood-08.jpeg" alt="Dish 8" />
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <span class="menu-prep">Prep Time: 10-15min</span>
+          <button class="menu-btn">
+            <a href="#" target="_blank" rel="noopener noreferrer">Order Now</a>
+          </button>
+        </div>
+        <div class="card menu-card">
+          <h3>Dish 9</h3>
+          <img src="assets/mfood-09.jpg" alt="Dish 9" />
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <span class="menu-prep">Prep Time: 10-15min</span>
+          <button class="menu-btn">
+            <a href="#" target="_blank" rel="noopener noreferrer">Order Now</a>
+          </button>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <img src="assets/logos/logo2.png" alt="Logo" class="footer-logo" />
+      <p>&copy; 2024 Little Lemon. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
